<resources>
    <string name="app_name">420</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_username">celloMaster96</string>
    <string name="enter_username">Enter your username:</string>
    <string name="play">play</string>
    <string name="default_welcome_text">Ready to get high, billFredrickson?</string>
    <string name="join">Join</string>
    <string name="host">Host</string>
    <string name="your_lobby_address_is">Your lobby address is:</string>
    <string name="xxx_xxx_xxxx">XXX-XXX-XXXX</string>
    <string name="_ready">Ready?</string>
    <string name="welcome_to_lobby">Welcome to lobby</string>
    <string name="connect">Connect</string>
    <string name="default_lobby_address">000000000</string>
    <string name="blank_username_error">Please enter a username!</string>
    <string name="blank_address_error">Please enter an address.</string>
    <string name="invalid_address_error">Invalid room address!</string>
    <string name="default_victor_text">Default is the winner with an altitude of 500 ft!</string>
    <string name="gg">GG</string>
    <string name="go">GO!</string>
    <string name="leaderboards">LEADERBOARDS</string>
    <string name="no_barometer_warning">No barometer present</string>
    <string name="no_baromater_sorry">Your phone doesn\'t have a barometer! Sorry!</string>
</resources>
