<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_host_lobby"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.threebetasonematt.a420game.HostLobbyActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_lobby_address_is"
            android:id="@+id/hostlobby_addressindicator"
            android:textSize="20dp"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/xxx_xxx_xxxx"
            android:textSize="24dp"
            android:layout_below="@id/hostlobby_addressindicator"
            android:layout_centerHorizontal="true"
            android:id="@+id/hostlobby_address"/>
    </RelativeLayout>

    <ListView
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:id="@+id/host_user_list"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

    </ListView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_ready"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"/>


</RelativeLayout>
